fix: job detail button gap

--- a/src/components/JobDetailModal/JobDetailModal.module.scss
+++ b/src/components/JobDetailModal/JobDetailModal.module.scss
@@ -17,7 +17,7 @@ $error: #d32f2f;
   .button {
     background-color: $color1;
     color: white;
-    margin-right: 8px;
+    margin: 8px 8px 0px 0px;
 
     &:hover {
       background-color: $hover1;
